[gd_scene load_steps=6 format=2]

[ext_resource path="res://Textures/spacepixels-0.1.0/pixel_ship_red.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Textures/space-ship-upgrade/shield.png" type="Texture" id=3]
[ext_resource path="res://Music/Classic Arcade SFX/Lasers and shooting/Shoot_2.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.0
height = 48.0

[node name="Player" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="FirePoints" type="Node2D" parent="."]

[node name="Left_Gun" type="Node2D" parent="FirePoints"]
position = Vector2( -36, 2 )

[node name="Right_Gun" type="Node2D" parent="FirePoints"]
position = Vector2( 36, 2 )

[node name="FireDelayTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ShieldTimer" type="Timer" parent="."]
one_shot = true

[node name="shield" type="Sprite" parent="."]
position = Vector2( 0, -42 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="FireSounds" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="ShieldTimer" to="." method="_on_ShieldTimer_timeout"]
